2016-02-13  Benno Schulenberg  <bensberg@justemail.net>
	* src/browser.c (do_browser, browser_refresh): Rebuild the file list
	only when necessary, not for each and every cursor movement.  This
	fixes Savannah bug #47133.
	* src/files.c (save_poshistory): Allocate enough space for printing
	out the line and column numbers.  This fixes Savannah bug #47135.

GNU nano 2.5.2 - 2016.02.12

2016-02-11  Benno Schulenberg  <bensberg@justemail.net>
	* src/text.c (do_linter): Go to the next item in the list before
	freeing the current one.  This fixes Savannah bug #46796.
	* src/text.c (do_formatter): Don't leave curses mode, as that would
	hide any error messages upon reentry.  And if there are any messages,
	allow the user a little time to read them.
	* src/text.c (do_linter, do_formatter): Condense some declarations,
	rewrap some lines, and improve a few comments.
	* doc/syntax/go.nanorc: Make the formatter command more visible.

2016-02-10  Benno Schulenberg  <bensberg@justemail.net>
	* src/text.c (discard_until): Prevent a chain of editing actions from
	continuing after a discard.  This fixes Savannah bug #47104.
	* src/files.c (get_full_path): Plug a sneaky memory leak.  This fixes
	Savannah bug #47003 reported and solved by Mike Frysinger.
	* src/rcfile.c (parse_binding): Allow only control sequences in the
	proper range to be rebound.  This fixes Savannah bug #47025.
	* THANKS: Add a Spanish, a Catalan, and a Croat translator.
	* AUTHORS, THANKS: Remove SVN Id tags and a duplication.
	* src/winio.c (get_kbinput), src/nano.c (main): Switch the cursor on
	in the right place: in the central input routine.
	* src/files.c (load_poshistory): Free any records that are dropped.
	This fixes Savannah bug #47111 reported by Mike Frysinger.

2016-02-09  Benno Schulenberg  <bensberg@justemail.net>
	* src/files.c (stat_with_alloc, open_buffer, write_file): Check the
	result of a stat() to avoid referencing unitialized data.  Original
	patch was by Kamil Dudka.